deploy/kustomize/kyverno/mutate/test/patched-pod-envoy-sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    xds.semaphore.uw.systems/client: envoy-sidecar
  name: pod-envoy-sidecar
  namespace: default
spec:
  containers:
    - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: GRPC_XDS_BOOTSTRAP_CONFIG
          value: |-
            {
              "xds_servers": [{
                "server_uri": "semaphore-xds-localhost.sys-semaphore.svc.cluster.local:18000",
                "channel_creds": [{"type": "insecure"}],
                "server_features": ["xds_v3"]}
              ],
              "node":{
                "id":"default/$(POD_NAME)",
                "locality":{}
              }
            }
      image: my-app:latest
      name: my-app
    - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: GRPC_XDS_BOOTSTRAP_CONFIG
          value: |-
            {
              "xds_servers": [{
                "server_uri": "semaphore-xds-localhost.sys-semaphore.svc.cluster.local:18000",
                "channel_creds": [{"type": "insecure"}],
                "server_features": ["xds_v3"]}
              ],
              "node":{
                "id":"default/$(POD_NAME)",
                "locality":{}
              }
            }
      image: my-app-2:latest
      name: my-app-2
  initContainers:
    - name: original-init
      image: test
    - command:
        - /bin/sh
        - -c
        - |
          echo '
          admin:
            address:
              socket_address: { address: 127.0.0.1, port_value: 9901 }
          static_resources:
            listeners:
            - name: listener_0
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 18001
              filter_chains:
                - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                        stat_prefix: ingress_http
                        codec_type: AUTO
                        rds:
                          route_config_name: kube_dynamic
                          config_source:
                            resource_api_version: V3
                            api_config_source:
                              api_type: DELTA_GRPC
                              transport_api_version: V3
                              grpc_services:
                              - envoy_grpc:
                                  cluster_name: xds_cluster
                        http_filters:
                          - name: envoy.filters.http.on_demand
                            typed_config:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.on_demand.v3.OnDemand
                          - name: envoy.filters.http.router
                            typed_config:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            - name: listener_admin
              address:
                socket_address:
                  address: 0.0.0.0
                  port_value: 9902
              filter_chains:
                - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                        stat_prefix: ingress_http
                        route_config:
                          name: local_route
                          virtual_hosts:
                              name: local_service
                              domains:
                                - "*"
                              routes:
                                - match:
                                    prefix: "/metrics"
                                  route:
                                      cluster: envoy_admin
                                      prefix_rewrite: "/stats/prometheus"
                                - match:
                                    prefix: "/ready"
                                  route:
                                      cluster: envoy_admin
                        http_filters:
                          - name: envoy.filters.http.router
                            typed_config:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            clusters:
            - name: xds_cluster
              connect_timeout: 0.25s
              type: STRICT_DNS
              lb_policy: ROUND_ROBIN
              typed_extension_protocol_options:
                envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                  "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
                  explicit_http_config:
                    http2_protocol_options:
                      connection_keepalive:
                        interval: 30s
                        timeout: 5s
              upstream_connection_options:
                # configure a TCP keep-alive to detect and reconnect to the admin
                # server in the event of a TCP socket half open connection
                tcp_keepalive: {}
              load_assignment:
                cluster_name: xds_cluster
                endpoints:
                - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: semaphore-xds.sys-semaphore.svc.cluster.local
                          port_value: 18000
            - name: envoy_admin
              connect_timeout: 0.25s
              type: STATIC
              load_assignment:
                cluster_name: envoy_admin
                endpoints:
                - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 9901
          ' > /etc/envoy/config.yaml
          envoy -c /etc/envoy/config.yaml --service-node default/${POD_NAME} --service-cluster default/${POD_NAME}
      env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
      image: envoyproxy/envoy:v1.33.0
      imagePullPolicy: Always
      name: envoy-sidecar
      restartPolicy: Always
      startupProbe:
        failureThreshold: 10
        httpGet:
          path: /ready
          port: 9902
        periodSeconds: 1
      volumeMounts:
        - mountPath: /etc/envoy
          name: envoy-config
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
  volumes:
    - projected:
        defaultMode: 420
    - name: envoy-config
