deploy/kustomize/kyverno/mutate/test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-semaphore-xds-policies
spec:
  steps:
    - name: setup-prerequisites
      try:
        - apply:
            resource:
              apiVersion: v1
              kind: Namespace
              metadata:
                name: ns-with-mutate-label
                labels:
                  xds.semaphore.uw.systems/mutate: bootstrap-client-config

    - name: apply-policies-and-exceptions
      try:
        - apply:
            file: ../mutate-semaphore-xds-clients-env.yaml
        - apply:
            file: ../mutate-semaphore-xds-envoy-sidecar.yaml

        - assert:
            timeout: 30s
            resource:
              apiVersion: policies.kyverno.io/v1
              kind: MutatingPolicy
              metadata:
                name: mutate-semaphore-xds-bootstrap-config
              status:
                conditionStatus:
                  (conditions[?type == 'RBACPermissionsGranted']):
                    - message: Policy is ready for reporting.
                      reason: Succeeded
                      status: "True"
                  (conditions[?type == 'WebhookConfigured']):
                    - message: Webhook configured.
                      reason: Succeeded
                      status: "True"

        - assert:
            timeout: 30s
            resource:
              apiVersion: policies.kyverno.io/v1
              kind: MutatingPolicy
              metadata:
                name: mutate-semaphore-xds-envoy-sidecar
              status:
                conditionStatus:
                  (conditions[?type == 'RBACPermissionsGranted']):
                    - message: Policy is ready for reporting.
                      reason: Succeeded
                      status: "True"
                  (conditions[?type == 'WebhookConfigured']):
                    - message: Webhook configured.
                      reason: Succeeded
                      status: "True"

    - name: deploy-test-resources
      try:
        - apply:
            file: resources.yaml

    - name: assert-mutate-semaphore-xds-bootstrap-config
      try:
        - assert:
            timeout: 30s
            file: patched-pod-client-true.yaml

        - assert:
            timeout: 30s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: pod-exclude
                namespace: default
                labels:
                  xds.semaphore.uw.systems/client: "exclude"
              spec:
                containers:
                  - name: my-app
                    image: my-app:latest
                    (env == null): true

    - name: mutate-semaphore-xds-envoy-sidecar
      try:
        - assert:
            timeout: 30s
            file: patched-pod-envoy-sidecar.yaml
